[package]
name = "pdfium_rs"
version = "0.1.0"
authors = ["Andrew Safigan <asafigan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdfium_core = { path = "crates/pdfium_core", version = "0.1.0" }

[dev-dependencies]
image = "0.23"
once_cell = "1"

[workspace]
members = ["crates/*"]
