[package]
name = "pdfium_core"
version = "0.1.0"
authors = ["Andrew Safigan <asafigan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdfium_bindings = { path = "../pdfium_bindings", version = "0.1.0" }

[dev-dependencies]
once_cell = "1"