[package]
name = "pdfium_core"
version = "0.1.0"
authors = ["Andrew Safigan <asafigan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1"
parking_lot = "0.11"

[build-dependencies]
bindgen = "0.53"

[dev-dependencies]
image = "0.23"